Connecting to Github with First manual push
